--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,13 @@ Thumbs.db
 
 # Dependencias
 /node_modules
+# Others
+package-lock.json
+yarn.lock
+.pnpm-debug.log
+.pnp
+.pnp.js
+
 
 # Archivos de compilación
 /build
