--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.0.0",
     "ajv": "^8.16.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
@@ -14,8 +14,11 @@
     "chart.js": "^4.4.3",
     "connect-session-sequelize": "^7.1.7",
     "express-session": "^1.18.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
+    "jsqr": "^1.4.0",
     "postcss": "^8.4.39",
-    "qrcode.react": "^1.0.0",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
     "react-chartjs-2": "^5.2.0",
