--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -12,19 +12,24 @@
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.3",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "connect-session-sequelize": "^7.1.7",
     "express-session": "^1.18.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "jsqr": "^1.4.0",
+    "moment": "^2.30.1",
     "postcss": "^8.4.39",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-loader-spinner": "^6.1.6",
+    "react-modal": "^3.16.1",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-qrcode-logo": "^3.0.0",
     "react-router-dom": "^6.23.1",
