--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,10 @@
-DB_DATABASE=
-DB_PASSWORD=
-DB_HOST=
-DB_DIALECT=
-PORT=
-EMAIL_USER=
-EMAIL_PASS=
+
+DB_DATABASE=db_checkineat
+DB_USERNAME=root
+DB_PASSWORD=****
+DB_HOST=127.0.0.1
+DB_PORT=3307  
+DB_DIALECT=mysql
+PORT=3001
+EMAIL_USER=c3930175@gmail.com
+EMAIL_PASS=******
